--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,5 +15,7 @@
 
   <div id="container">
         <app-mask-detect></app-mask-detect>
+        <iframe src="https://dinosaur-game.io/game/dino/" style="width: 100vw; height: 100vh;"></iframe>
+
   </div>
 </ion-content>
